--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,8 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <properties>
+           <sonar.organization>2020aiopatil</sonar.organization>
+           <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 </project>
